# fb2

./: .gitignore  README.md  combined_data.txt  noisy_data.py  opgave.ipynb  pyproject.toml  quiz.ipynb  reflection.pptx
other/: noisy_combined_data.txt
src/fb2/: __init__.py  mm_widet.py  quiz.py  textbox.py
src/fb2/data/: mm_dataset.py
