[project]
name = "fb2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mads-Peter", email = "machri@phys.au.dk" }
]
requires-python = ">=3.10"
dependencies = [
    "ipykernel",
    "ipywidgets",
    "jupyter",
    "matplotlib",
    "numpy",
    "pandas",
    "scipy",
]

[project.scripts]
fb2 = "fb2:main"

[build-system]
requires = ["uv_build>=0.8.10,<0.9.0"]
build-backend = "uv_build"